2003-08-11  John Levon  <levon@movementarian.org>

	* libpp/filename_spec.h:
	* libpp/profile_spec.cpp:
	* libpp/profile_spec.h: add comments, allow comma lists
	for event, count, and unit mask

	* libutil++/comma_list.h: implement missing method

2003-08-11  John Levon  <levon@movementarian.org>

	* libpp/format_output.cpp:
	* libpp/format_output.h: add set_nr_groups(), remove
	pp_nr_counters.

	* libpp/profile_container.cpp:
	* libpp/profile_container.h:
	* pp/opannotate.cpp:
	* pp/opgprof.cpp:
	* pp/opreport.cpp: count_group not counter

2003-08-11  John Levon  <levon@movementarian.org>

	* libpp/Makefile.am:
	* libpp/counter_array.cpp:
	* libpp/counter_array.h: rename to ...

	* libpp/count_array.h:
	* libpp/count_array.cpp: ... this ...

	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* libpp/profile.cpp:
	* libpp/profile.h:
	* libpp/profile_container.cpp:
	* libpp/profile_container.h:
	* libpp/sample_container.cpp:
	* libpp/sample_container.h:
	* libpp/symbol.h:
	* pp/opannotate.cpp:
	* pp/opgprof.cpp:
	* pp/opreport.cpp: ... and several renamings to starting
	change the notion from "counters" to the more general notion
	of "count groups"

2003-08-10  Philippe Elie  <phil.el@wanadoo.fr>

	Multiple counter support for pp tools.

	* libpp/counter_array.h:
	* libpp/counter_array.cpp: resurected from pp-interface-branch, for now
	 memory use is inefficient.
	* libpp/Makefile.am: add counter_array.cpp .h
	* libpp/format_out.h:
	* libpp/format_out.cpp: handle multiple counter + a general tidy
	* libpp/format_flags.h: remove ff_immutable_mask and some nasty
	  requisite on flags value
	* libpp/profile_container.h:
	* libpp/profile_container.cpp:
	* libpp/sample_container.h:
	* libpp/sample_container.cpp:
	* libpp/symbol.h:
	* libpp/symbol_container.cpp:
	* libpp/symbol_sort.cpp:
	* pp/opreport.cpp: handle multiple counter
	* pp/opannotate.cpp: partial handling of multiple counter
	* pp/opgprof.cpp:
	* pp/opreport.cpp: minor bits
